--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ form{
     background-color: #c8d6e5;
     padding: 224px 0;
     text-align: center;
+    display: none;
 }
 
 form h2{
@@ -44,4 +45,41 @@ button{
 
 #botao-cancelar{
 background-color: red;
+}
+
+ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+ul li {
+    max-width: 25%;
+    list-style: none;
+    position: relative;
+    max-height: 280px;
+    overflow-y: hidden;
+}
+
+ul li img {
+    width: 100%;
+}
+
+.overlay {
+    padding: 16px;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transition: all ease .5s;
+}
+
+.overlay a {
+    color: white;
+    text-decoration: none;
+}
+
+ul li:hover .overlay {
+    opacity: 1;
 }
